--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="container mt-5">
+  <div class="row mt-5">
+    <!--<router-outlet></router-outlet>-->
+    <app-demo></app-demo>
+  </div>
+</div>
