--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,22 @@
   <img class="d-block mx-auto mb-4" ngSrc="assets/images/bootstrap-logo.svg" alt="" width="72" height="57">
   <h1 class="display-5 fw-bold">Selamat Datang</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">Selamat Datang di Website Enigma APP</p>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-      <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-      <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-    </div>
+    <p class="lead mb-4">Welcome to {{title}}</p>
+    <hr>
+    <h1>Penerapan String Interpolation</h1>
+    <p>Expression : {{1 + 1}}</p>
+    <p>Array car : {{ cars }}</p>
+    <p>Function : {{getTitle()}}</p>
+    <p>Object : {{customer.name}}</p>
+
+    <button
+      type="button"
+      class="btn btn-primary"
+      [disabled]="!isDisabled"
+      (click)="onClickButton()"
+    >
+      Get Started
+    </button>
+    <p class="mt-2">Status Button : {{isDisabled}}</p>
   </div>
 </div>
