--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
 <div class="container mt-5">
-  <div class="row mt-5">
-    <!--<router-outlet></router-outlet>-->
-    <app-demo></app-demo>
-  </div>
+  <router-outlet></router-outlet>
+  <!--<app-demo></app-demo>-->
 </div>
