--- a/src/app/pages/todos/todos.component.html
+++ b/src/app/pages/todos/todos.component.html
@@ -1,7 +1,8 @@
-<div class="px-4 py-5 my-5 text-center">
-  <img class="d-block mx-auto mb-4" ngSrc="assets/images/bootstrap-logo.svg" alt="" width="72" height="57">
-  <h1 class="display-5 fw-bold">Todos</h1>
-  <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">Todos</p>
+<div class="row mt-5">
+  <div class="col">
+    <app-todo-list></app-todo-list>
+  </div>
+  <div class="col">
+    <app-todo-form></app-todo-form>
   </div>
 </div>
