--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" routerLink="/about">Tentang</a>
         </li>
        <li class="nav-item">
-          <a class="nav-link" routerLink="/todos">Todos</a>
+          <a class="nav-link" routerLink="/pages/todos">Todos</a>
         </li>
       </ul>
     </div>
