--- a/src/app/pages/todos/components/todo-form/todo-form.component.html
+++ b/src/app/pages/todos/components/todo-form/todo-form.component.html
@@ -1,16 +1,24 @@
 <h3>Todo Form</h3>
 <div class="card">
   <div class="card-body">
-    <form>
+    <form action="" [formGroup]="todoForm" (ngSubmit)="onSubmit()">
       <div class="input-group">
         <div class="input-group-text">
           <input
             type="checkbox"
             class="form-check-input"
             aria-label="Checkbox for following text input"
+            formControlName="isDone"
           >
         </div>
-        <input type="text" class="form-control" placeholder="Todo Name" aria-label="Username" aria-describedby="basic-addon1">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Todo Name"
+          aria-label="Username"
+          aria-describedby="basic-addon1"
+          formControlName="title"
+        >
         <button
           type="submit"
           class="btn btn-outline-primary"
