feat: add session storage update complete or not complete task

--- a/src/app/pages/todos/todos.component.html
+++ b/src/app/pages/todos/todos.component.html
@@ -2,6 +2,7 @@
   <div class="col">
     <app-todo-list
       [list]="todos"
+      (toggleTodo)="onToggleTodo()"
     ></app-todo-list>
   </div>
   <div class="col">
