--- a/src/app/pages/todos/components/todo-list/todo-list.component.html
+++ b/src/app/pages/todos/components/todo-list/todo-list.component.html
@@ -3,9 +3,20 @@
   <ul class="list-group list-group-flush">
     <li class="list-group-item" *ngFor="let todo of list">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="{{todo.id}}_checkbox" [value]="todo.id" [checked]="todo.isDone">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="{{todo.id}}_checkbox"
+          [value]="todo.id"
+          [checked]="todo.isDone" 
+          (click)="onCheckTodo(todo)"
+        >
         <label for="{{todo.id}}_checkbox" class="form-check-label">{{todo.title}}</label>
-        <button class="btn btn-link btn-sm float-end">Edit</button>
+        <button 
+          class="btn btn-link btn-sm float-end"
+        >
+        Edit
+        </button>
       </div>
     </li>
   </ul>
