--- a/src/app/pages/todos/todos.component.html
+++ b/src/app/pages/todos/todos.component.html
@@ -3,12 +3,13 @@
     <app-todo-list
       [list]="todos"
       (toggleTodo)="onToggleTodo()"
+      (editTodo)="onEditTodo($event)"
+      (deleteTodo)="onDeleteTodo($event)"
     ></app-todo-list>
   </div>
   <div class="col">
     <app-todo-form
-      [todo]="todo"
-      (saveTodo)="onSaveTodo($event)"
+      [(todo)]="todo"
     ></app-todo-form>
   </div>
 </div>
