--- a/src/app/pages/todos/components/todo-list/todo-list.component.html
+++ b/src/app/pages/todos/components/todo-list/todo-list.component.html
@@ -1,7 +1,7 @@
 <h3>Todo List</h3>
 <div class="card" >
   <ul class="list-group list-group-flush">
-    <li class="list-group-item" *ngFor="let todo of list">
+    <li class="list-group-item" *ngFor="let todo of todos">
       <div class="form-check">
         <input
           class="form-check-input"
@@ -14,8 +14,15 @@
         <label for="{{todo.id}}_checkbox" class="form-check-label">{{todo.title}}</label>
         <button 
           class="btn btn-link btn-sm float-end"
+          (click)="onSelectTodo(todo)"
         >
         Edit
+        </button>
+        <button 
+          class="btn btn-link btn-sm float-end"
+          (click)="onDeleteTodo(todo)"
+        >
+        Delete
         </button>
       </div>
     </li>
