--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,21 +1,25 @@
 <div class="row mt-5 justify-content-center">
     <div class="col-md-6">
+      <div
+        *ngIf="alertIsShow"
+        class="alert alert-{{alert.status}} "
+        role="alert"
+        >
+        {{alert.text}}
+        <button type="button" class="btn btn-close" aria-label="Close" (click)="alertIsShow=false"></button>
+      </div>
         <h2 class="text-center">Login</h2>
-        <form>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" formControlName="email">
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" formControlName="password">
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
-                        <span class="text-secondary m-2">Belum punya akun ?</span> <a routerLink="/auth/register">Register</a>
+          <span class="text-secondary m-2">Belum punya akun ?</span> <a routerLink="/auth/register">Register</a>
           </form>
     </div>
   </div>
