--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,6 +16,9 @@
           <a class="nav-link" routerLink="/pages/todos">Todos</a>
         </li>
         <li class="nav-item" *ngIf="isLoggedIn()">
+          <a class="nav-link" routerLink="/pages/todo-api">Todos Api</a>
+        </li>
+        <li class="nav-item" *ngIf="isLoggedIn()">
           <a class="nav-link" routerLink="/auth/logout">Logout</a>
         </li>
       </ul>
